infra/environments/production/ingressPatch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
spec:
  tls:
  - hosts:
    - play.wallfair.io
    - prod.wallfair.io
    secretName: backend-production-cert-secret
  rules:
  - host: play.wallfair.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-main
              port:
                number: 80
  - host: prod.wallfair.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-main
              port:
                number: 80
